[project]
name = "wagtail-bootstrap-app"
version = {use_scm = true}
description = "An boilerplate / bootstrap installation of a Wagtail app"
authors = [
    {name = "Martijn Jacobs", email = "maerteijn@gmail.com"},
]
dependencies = [
    "django>=3.1,<3.3",
    "wagtail~=2.14"
]
requires-python = ">=3.7"
dynamic = ["version", "classifiers"]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[project.urls]
homepage = "https://github.com/maerteijn/wagtail-bootstrap-app"
repository = "https://github.com/maerteijn/wagtail-bootstrap-app"

[tool.pdm]
includes = ["src/wagtail_bootstrap_app"]
package-dir = "src"

[tool.pdm.scripts]
flake8 = "flake8 ."
pylint = "pylint src/"
pytest = "pytest"
black = "black src/"
isort = "isort ."
manage.py = "sandbox/manage.py"

[tool.pdm.dev-dependencies]
dev = [
    "flake8~=3.8",
    "flake8-black<1.0.0,>=0.2.1",
    "flake8-isort==4.0",
    "pylint~=2.8",
    "pytest~=6.2",
    "pytest-django~=4.4",
    "pytest-cov~=2.11",
    "pytest-env~=0.6",
    "pytest-pythonpath~=0.7",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 88
exclude = "/migrations/|/__pypackages__/"

[tool.pylint.messages_control]
disable = "C,W5103"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.master]
init-hook = "import sys; sys.path.append('.')"
ignore = "migrations"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sandbox.settings"
testpaths = "tests/"
addopts = "--reuse-db --cov=wagtail_bootstrap_app"
python_paths = "sandbox"

[tool.coverage.run]
omit = ["**/migrations/**", "**/tests/**", "sandbox/**", "__pypackages__/**"]

[tool.coverage.report]
show_missing = true
